Travis: Conda build needs to be installed in the root environment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,9 @@ install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
   - bash Miniconda3-latest-Linux-x86_64.sh -b -p $CONDA_PREFIX
   - conda update -y conda
+  - conda install -y conda-build
   - conda create -y -p $REL_DIR python=3.5 cmake h5py ipython numpy
-  - source $REL_DIR/bin/activate $REL_DIR
+  - source activate $REL_DIR
   - conda install -y --channel lcls-rhel7 cpsw yaml-cpp
   - conda install -y --channel lightsource2-tag epics-base
 
@@ -43,7 +44,6 @@ before_script:
   - |
     if [[ $USE_LEGION -eq 1 ]]; then
       git clone https://github.com/slac-lcls/relmanage.git
-      conda install -y conda-build
       conda build relmanage/recipes/legion/ --output-folder channels/external/
       conda install legion -c file://`pwd`/channels/external --override-channels
     fi
