start refactoring stuff out of drp main.cc

--- a/drp/CMakeLists.txt
+++ b/drp/CMakeLists.txt
@@ -1,14 +1,19 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-#add_library(utils SHARED
-#    mpscqueue.cc
-#    fex.cc
-#)
 
-add_executable(drp
+add_library(drp SHARED
+    Digitizer.cc
+    AreaDetector.cc
+)
+
+target_link_libraries(drp
+    xtc
+    pshdf5
+    eb
+)
+
+add_executable(main
     main.cc
 )
 
@@ -17,19 +22,10 @@ add_executable(drp
 #    $<INSTALL_INTERFACE:include>
 #)
 
-target_link_libraries(drp
+target_link_libraries(main
+    drp
     pthread
     xtc
     pshdf5
     eb
 )
-
-add_executable(pgp-sender
-    pgp-sender.cc
-)
-
-#target_link_libraries(test-queues
-#    utils
-#    pthread
-#    xtc
-#)
