rename TimeStamp to PulseId and ClockTime to TimeStamp

--- a/xtcdata/CMakeLists.txt
+++ b/xtcdata/CMakeLists.txt
@@ -4,13 +4,13 @@ add_library(xtc SHARED
     xtc/src/Sequence.cc
     xtc/src/TransitionId.cc
     xtc/src/XtcIterator.cc
-    xtc/src/ClockTime.cc
+    xtc/src/TimeStamp.cc
     xtc/src/Level.cc
     xtc/src/Src.cc
     xtc/src/TypeId.cc
     xtc/src/DetInfo.cc
     xtc/src/ProcInfo.cc
-    xtc/src/TimeStamp.cc
+    xtc/src/PulseId.cc
     xtc/src/XtcFileIterator.cc
     xtc/src/ShapesData.cc
     xtc/src/NamesIter.cc
