--- a/psdaq/scripts/part7.cnf
+++ b/psdaq/scripts/part7.cnf
@@ -1,8 +1,10 @@
 #
 #  Put it all together
 #
-bin_path     = './'
-scripts_path = '../psdaq/scripts/'
+path_base     = '~nobody/daq/'
+bin_path      = path_base+'lcls2/build/'
+scripts_path  = path_base+'lcls2/psdaq/scripts/'
+procstat_path = path_base+'lcls2/psdaq/procmgr/'
 
 if not platform: platform = '7'
 username = 'lcls2'
@@ -10,22 +12,12 @@ pv_prefix = 'DAQ:LAB2'
 expname  = 'expname'
 expnum   = 'expnum'
 
-daq_tst_dev01 = "172.21.42.97"
-daq_tst_dev02 = "172.21.42.150"
-daq_tst_dev03 = "172.21.42.110"
-daq_tst_dev04 = "172.21.42.148"
-daq_tst_dev05 = "172.21.42.155"
-drp_tst_acc01 = "172.21.42.201"
-drp_tst_acc02 = "172.21.42.202"
-drp_tst_acc03 = "172.21.42.221"
-drp_tst_acc04 = "172.21.42.222"
-drp_tst_acc05 = "172.21.42.223"
-drp_tst_acc06 = "172.21.42.224"
+daq_tst_dev04 = "daq-tst-dev04"
 
-epics_host = daq_tst_dev02
+epics_host = daq_tst_dev04
 epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_AUTO_ADDR_LIST=NO EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
-pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.3.2'
-shelf = '1'
+pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.2.7'
+shelf = '2'
 ip_addr = '10.0.'+shelf
 
 # procmgr FLAGS: <port number> static port number to keep executable
@@ -59,9 +51,13 @@ procmgr_config = [
 #{                       id:'dti-103' , flags:'sx', cmd:bin_path+'psdaq/dti/dti_simple -a '+ip_addr+'.103 -u 0x7f -f 1,2,4,8,16,32,64   -t '+platform},
 #{                       id:'dti-104' , flags:'sx', cmd:bin_path+'psdaq/dti/dti_simple -a '+ip_addr+'.104 -u 0x1b -f 1,2,8,16      -t '+platform},
 #{                       id:'dti-105' , flags:'sx', cmd:bin_path+'psdaq/dti/dti_simple -a '+ip_addr+'.105 -u 0x3d -f 1,4,8,16,32   -t '+platform}, # us1         link down
-  {                       id:'dticas'     , port:'29753', flags:'sx', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/dticas.py -P '+pv_prefix+' -R DTI:'+shelf+'3'},
-  { host: drp_tst_acc02,  id:'dtiioc-103' , port:'29754', flags:'sx', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.103 -P '+pv_prefix+':DTI:'+shelf+'3'},
+  {                       id:'dticas'     , port:'29753', flags:'sx', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/dticas.py -P '+pv_prefix+' -R DTI:'+shelf+'3,DTI:'+shelf+'4'},
+
+  { host: epics_host,     id:'dtiioc-103' , port:'29754', flags:'sx', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.103 -P '+pv_prefix+':DTI:'+shelf+'3'},
   {                       id:'dtigui-103' , flags:'sx', cmd:scripts_path+'/launch_py '+scripts_path+'/dtica.py '+pv_prefix+':DTI:'+shelf+'3'},
+
+  { host: epics_host,     id:'dtiioc-104' , port:'29755', flags:'sx', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.104 -P '+pv_prefix+':DTI:'+shelf+'4'},
+  {                       id:'dtigui-104' , flags:'sx', cmd:scripts_path+'/launch_py '+scripts_path+'/dtica.py '+pv_prefix+':DTI:'+shelf+'4'},
 #
 #  PGP camera simulators
 #
@@ -78,8 +74,8 @@ procmgr_config = [
 #
 #  Diagnostics
 #
- {                       id:'epics', flags:'sx', cmd:'/usr/bin/bash'},
+ {                       id:'epics', flags:'sx', cmd:'/bin/bash'},
 
 ## procstat
- {                       id:'procstat',    flags:'s',    env:'LD_LIBRARY_PATH=/reg/g/pcds/package/python-2.5.2/lib:/reg/g/pcds/package/qt-4.3.4_x86_64/lib PATH=/reg/g/pcds/package/python-2.5.2/bin:/reg/g/pcds/package/qt-4.3.4_x86_64/bin: PYTHONPATH=', cmd:'/reg/g/pcds/dist/pds/tools/procmgr/procstat.py -t '+username+' -e0 -n none -p '+platform+' p'+platform+'.cnf.last'},
+ {                       id:'procstat',    flags:'s',    env:'LD_LIBRARY_PATH=/reg/g/psdm/sw/conda2/inst/envs/ps-0.0.4/lib PYTHONPATH=', cmd:procstat_path+'/procstat.py -t '+username+' -e0 -p '+platform+' p'+platform+'.cnf.last'},
   ]
