link librt to pick up clock_gettime on RHEL6 and pick up libfabric from conda

--- a/psdaq/eb/CMakeLists.txt
+++ b/psdaq/eb/CMakeLists.txt
@@ -14,12 +14,15 @@ add_library(eb SHARED
 target_include_directories(eb PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
+    $ENV{CONDA_PREFIX}/include
 )
+
+find_library(FABRIC_CPP_LIBRARY fabric PATH $ENV{CONDA_PREFIX}/lib)
 
 target_link_libraries(eb
     xtc
     service
-    fabric
+    ${FABRIC_CPP_LIBRARY}
 )
 
 add_executable(ft_pingpong ft_pingpong.cc fiTransport.cc)
@@ -77,14 +80,17 @@ target_link_libraries(ft_writemsg_server
 target_link_libraries(tstEbContributor
     eb
     pthread
+    rt
 )
 
 target_link_libraries(tstEbBuilder
     eb
     pthread
+    rt
 )
 
 target_link_libraries(drpEbBuilder
     eb
     pthread
+    rt
 )
