Move to C++11; Add diagnostics; Update to newer Dgram

--- a/psdaq/eb/CMakeLists.txt
+++ b/psdaq/eb/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 add_library(eb SHARED
   Endpoint.cc
   Batch.cc
@@ -12,79 +11,86 @@ add_library(eb SHARED
 )
 
 target_include_directories(eb PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
-    $<INSTALL_INTERFACE:include>
+  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+  $<INSTALL_INTERFACE:include>
 )
 
 target_link_libraries(eb
-    xtc
-    service
-    fabric
+#  -pg
+  xtc
+  service
+  fabric
 )
 
 add_executable(ft_pingpong ft_pingpong.cc fiTransport.cc)
 
-add_executable(ft_publish ft_publish.cc)
-add_executable(ft_sub ft_sub.cc)
-add_executable(ft_push ft_push.cc)
-add_executable(ft_request ft_request.cc)
-add_executable(ft_server ft_server.cc)
-add_executable(ft_client ft_client.cc)
+add_executable(ft_publish         ft_publish.cc)
+add_executable(ft_sub             ft_sub.cc)
+add_executable(ft_push            ft_push.cc)
+add_executable(ft_request         ft_request.cc)
+add_executable(ft_server          ft_server.cc)
+add_executable(ft_client          ft_client.cc)
 add_executable(ft_writemsg_client ft_writemsg_client.cc)
 add_executable(ft_writemsg_server ft_writemsg_server.cc)
 
-add_executable(tstEbContributor tstEbContributor)
-add_executable(tstEbBuilder tstEbBuilder)
-add_executable(drpEbBuilder drpEbBuilder)
+add_executable(tstEbContributor tstEbContributor.cc)
+add_executable(tstEbBuilder     tstEbBuilder.cc)
+add_executable(drpEbBuilder     drpEbBuilder.cc)
+
+#target_compile_options(eb               PRIVATE -pg)
+#target_compile_options(tstEbContributor PRIVATE -pg)
+#target_compile_options(tstEbBuilder     PRIVATE -pg)
 
 target_link_libraries(ft_pingpong
-    eb
+  eb
 )
 
 target_link_libraries(ft_publish
-    eb
-    pthread
+  eb
+  pthread
 )
 
 target_link_libraries(ft_sub
-    eb
+  eb
 )
 
 target_link_libraries(ft_push
-    eb
+  eb
 )
 
 target_link_libraries(ft_request
-    eb
+  eb
 )
 
 target_link_libraries(ft_client
-    eb
+  eb
 )
 
 target_link_libraries(ft_server
-    eb
+  eb
 )
 
 target_link_libraries(ft_writemsg_client
-    eb
+  eb
 )
 
 target_link_libraries(ft_writemsg_server
-    eb
+  eb
 )
 
 target_link_libraries(tstEbContributor
-    eb
-    pthread
+#  -pg
+  eb
+  pthread
 )
 
 target_link_libraries(tstEbBuilder
-    eb
-    pthread
+#  -pg
+  eb
+  pthread
 )
 
 target_link_libraries(drpEbBuilder
-    eb
-    pthread
+  eb
+  pthread
 )
