fix top level cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ find_package(HDF5 REQUIRED HL)
 enable_testing()
 
 add_subdirectory(xtcdata)
-#add_subdirectory(psana)
-#add_subdirectory(psdaq)
-#add_subdirectory(pgp)
-#add_subdirectory(drp)
+add_subdirectory(psana)
+add_subdirectory(psdaq)
+add_subdirectory(pgp)
+add_subdirectory(drp)
