--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@ add_compile_options(-Wall)
 add_compile_options(-Wno-uninitialized)
 add_compile_options(-fno-omit-frame-pointer)
 
-find_package(PythonInterp 3.5 REQUIRED)
-find_package(PythonLibs 3.5 REQUIRED)
 find_package(xtc REQUIRED)
 
 option(PSANA_USE_LEGION "Enable support for Legion" OFF)
@@ -31,10 +29,6 @@ if(CLANG_FORMAT)
 endif()
 
 
-execute_process(COMMAND ${PYTHON_EXECUTABLE} -c
-    "import numpy; print(numpy.get_include(), end='')"
-    OUTPUT_VARIABLE NUMPY_INCLUDE_DIRS)
-
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -42,7 +36,6 @@ find_package(HDF5 REQUIRED HL)
 
 enable_testing()
 
-#add_subdirectory(psana)
 add_subdirectory(psdaq)
 add_subdirectory(pgp)
-#add_subdirectory(drp)
+add_subdirectory(drp)
