--- a/psdaq/CMakeLists.txt
+++ b/psdaq/CMakeLists.txt
@@ -7,5 +7,6 @@ add_subdirectory(dti)
 add_subdirectory(xpm)
 add_subdirectory(hsd)
 add_subdirectory(hdf5)
-add_subdirectory(app)
 add_subdirectory(bld)
+add_subdirectory(tpr)
+add_subdirectory(app)
