--- a/psdaq/psdaq/tpr/CMakeLists.txt
+++ b/psdaq/psdaq/tpr/CMakeLists.txt
@@ -6,3 +6,8 @@ add_library(tpr SHARED
 target_link_libraries(tpr
   xtcdata
 )
+
+install(TARGETS tpr
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+)
