move drp folder into psdaq

--- a/psdaq/psdaq/pgp/user-driver/CMakeLists.txt
+++ b/psdaq/psdaq/pgp/user-driver/CMakeLists.txt
@@ -6,13 +6,15 @@ add_compile_options(-Wno-uninitialized)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_library(pgpdriver
+add_library(pgpdriver SHARED
     pgpdriver.cc
 )
 
 target_include_directories(pgpdriver PUBLIC
-    ../../../../drp)
-
+    ../../../drp
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
 
 add_executable(status
     status.cc
@@ -34,4 +36,15 @@ add_executable(looptest
 )
 target_link_libraries(looptest
     pgpdriver
+)
+
+install(FILES
+    pgpdriver.h
+    DESTINATION include
+)
+
+install(TARGETS pgpdriver
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
 )
