--- a/psdaq/CMakeLists.txt
+++ b/psdaq/CMakeLists.txt
@@ -13,3 +13,4 @@ set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 add_subdirectory(psdaq)
+add_subdirectory(drp)
