Add missing ft_writemsg_client

--- a/psdaq/psdaq/eb/CMakeLists.txt
+++ b/psdaq/psdaq/eb/CMakeLists.txt
@@ -109,6 +109,7 @@ install(TARGETS eb
                 ft_request
                 ft_client
                 ft_server
+		ft_writemsg_client
 		ft_writemsg_server
 		tstEbContributor
 		tstEbBuilder
