--- a/psdaq/psdaq/scripts/part0.cnf
+++ b/psdaq/psdaq/scripts/part0.cnf
@@ -1,6 +1,5 @@
-bin_path     = './'
-scripts_path = '../psdaq/scripts/'
-bins_path    = bin_path+scripts_path
+bin_path  = '/reg/neh/home/weaver/lcls2/psdaq/build/'
+bins_path = '/reg/neh/home/weaver/lcls2/psdaq/psdaq/scripts/'
 
 platform = '0'
 username = 'lcls2'
@@ -19,10 +18,11 @@ drp_tst_acc04 = "172.21.42.222"
 drp_tst_acc05 = "172.21.42.223"
 drp_tst_acc06 = "172.21.42.224"
 
-epics_host = daq_tst_dev02
+#epics_host = daq_tst_dev02
+epics_host = 'daq-tst-dev02'
 
 epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
-pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.3.2'
+pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.0.2'
 shelf = '2'
 ip_addr = '10.0.'+shelf
 
@@ -48,9 +48,8 @@ procmgr_config = [
  {                       id:'modca'  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/xpmca.py DAQ:LAB2:XPM:'+shelf},
  {                       id:'deadca-'+platform  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/deadca.py DAQ:LAB2 '+platform+' '+shelf},
  { host: epics_host,  id:'xpmioc' ,port:'29452', flags:'s', env:epics_env, cmd:bin_path+'psdaq/xpm/xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
- {                       id:'dtisimple' , flags:'sx', cmd:'psdaq/dti/dti_simple -a '+ip_addr+'.104 -u 0xf -f 1,2,4,8'},
- { host: daq_tst_dev03,  id:'xLoop', flags:'s', cmd:bin_path+'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 5000 -n 16 -F 8 -S' },
- { host: daq_tst_dev01,  id:'xRead', flags:'sx', cmd:bin_path+'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_5 -L 4 -r' },
+ {                       id:'dti-104' , flags:'sx', cmd:bin_path+'psdaq/dti/dti_simple -a '+ip_addr+'.104 -u 0xf -f 1,2,4,8 -t '+platform},
+# {                       id:'dti-103' , flags:'sx', cmd:bin_path+'psdaq/dti/dti_simple -a '+ip_addr+'.103 -u 0xf -f 1,2,4,8 -t '+platform},
 
 ## procstat
  {                       id:'procstat',    flags:'s',    env:'LD_LIBRARY_PATH=/reg/g/pcds/package/python-2.5.2/lib:/reg/g/pcds/package/qt-4.3.4_x86_64/lib PATH=/reg/g/pcds/package/python-2.5.2/bin:/reg/g/pcds/package/qt-4.3.4_x86_64/bin: PYTHONPATH=', cmd:'/reg/g/pcds/dist/pds/tools/procmgr/procstat.py -t '+username+' -e0 -n none -p '+platform+' p'+platform+'.cnf.last'},
