--- a/psdaq/psdaq/scripts/part1.cnf
+++ b/psdaq/psdaq/scripts/part1.cnf
@@ -1,6 +1,5 @@
-bin_path     = './'
-#scripts_path = '../psdaq/scripts/'
-scripts_path = '/reg/neh/home/weaver/lcls2/psdaq/scripts/'
+bin_path  = '/reg/neh/home/weaver/lcls2/psdaq/build/'
+bins_path = '/reg/neh/home/weaver/lcls2/psdaq/psdaq/scripts/'
 
 platform = '1'
 username = 'lcls2'
@@ -10,8 +9,8 @@ expnum   = 'expnum'
 daq_tst_dev01 = "172.21.42.97"
 daq_tst_dev02 = "172.21.42.150"
 daq_tst_dev03 = "172.21.42.110"
-#daq_tst_dev04 = "172.21.42.148"
-#daq_tst_dev05 = "172.21.42.155"
+daq_tst_dev04 = "172.21.42.148"
+daq_tst_dev05 = "172.21.42.155"
 drp_tst_acc01 = "172.21.42.201"
 drp_tst_acc02 = "172.21.42.202"
 drp_tst_acc03 = "172.21.42.221"
@@ -19,9 +18,10 @@ drp_tst_acc04 = "172.21.42.222"
 drp_tst_acc05 = "172.21.42.223"
 drp_tst_acc06 = "172.21.42.224"
 
-epics_host = daq_tst_dev02
+epics_host = 'daq-tst-dev02'
+
 epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
-pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.3.2'
+pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.0.2'
 shelf = '2'
 ip_addr = '10.0.'+shelf
 
@@ -40,29 +40,16 @@ ip_addr = '10.0.'+shelf
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
-#  PCAS
- { host: epics_host,  id:'partcas',port:'29450', flags:'s', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/partcas.py -P DAQ:LAB2'},
- { host: epics_host,  id:'modcas' ,port:'29451', flags:'s', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/modcas.py -P DAQ:LAB2:XPM:'+shelf},
-# GUIs
- {                       id:'partca-'+platform ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/partca.py DAQ:LAB2:PART:'+platform},
- {                       id:'modca'  ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/xpmca.py DAQ:LAB2:XPM:'+shelf},
- {                       id:'deadca-'+platform  ,flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/deadca.py DAQ:LAB2 '+platform+' '+shelf},
-# XPM Controller
- { host: epics_host,  id:'xpmioc' ,port:'29452', flags:'s', env:epics_env, cmd:'psdaq/xpm/xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
-# DTI Controller
-# {                       id:'dtisimple' , flags:'sx', cmd:'psdaq/dti/dti_simple -a '+ip_addr+'.103 -u 0xf -f 1,2,4,8 -t '+platform},
-# { host: epics_host,  id:'dticas' , flags:'sx', env:pcas_env, cmd:scripts_path+'/launch_pcaspy '+scripts_path+'/dticas.py -P LAB2'},
-# { host: epics_host   id:'dtiioc' , flags:'sx', env:epics_env, cmd:'psdaq/dti/dtiPVs -a '+ip_addr+'.105 -P LAB2'},
-# {                       id:'dtigui' , flags:'s', cmd:scripts_path+'/launch_py '+scripts_path+'/dtica.py '},
-# PGP Camera simulator
-# { host: daq_tst_dev02,  id:'xLoop', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
-# Digitizer
- { host: daq_tst_dev02,  id:'hsd'    ,flags:'sx', cmd:bin_path+'psdaq/hsd/hsd_pgp -c 0x1 -s 0x3 -l 128 -p '+platform+' -t 0'},
-# DRP Receivers
-# { host: daq_tst_dev01,  id:'xRead', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 4 -r -c 32 -o 8'},
- { host: daq_tst_dev02,  id:'rdr'    ,flags:'sx', cmd:bin_path+'psdaq/hsd/hsdRead -P /dev/pgpcardG3_0_1 -L 4 -r -f /tmp/hsd_pgp_rdr.xtc'},
- {                       id:'epics', flags:'sx', cmd:epics_env, cmd:'/usr/bin/bash'},
+ { host: epics_host,  id:'partcas',port:'29450', flags:'s', env:pcas_env, cmd:bins_path+'/launch_pcaspy '+bins_path+'/partcas.py -P DAQ:LAB2'},
+ { host: epics_host,  id:'modcas' ,port:'29451', flags:'s', env:pcas_env, cmd:bins_path+'/launch_pcaspy '+bins_path+'/modcas.py -P DAQ:LAB2:XPM:'+shelf},
 
+ {                       id:'partca-'+platform ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/partca.py DAQ:LAB2:PART:'+platform},
+ {                       id:'modca'  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/xpmca.py DAQ:LAB2:XPM:'+shelf},
+ {                       id:'deadca-'+platform  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/deadca.py DAQ:LAB2 '+platform+' '+shelf},
+ { host: epics_host,  id:'xpmioc' ,port:'29452', flags:'s', env:epics_env, cmd:bin_path+'psdaq/xpm/xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
+ {                       id:'dti-103' , flags:'sx', cmd:bin_path+'psdaq/dti/dti_simple -a '+ip_addr+'.103 -u 0xf -f 1,2,4,8 -t '+platform},
+# { host: 'drp-tst-acc06', id:'simcam', flags:'s', cmd:bin_path+'psdaq/pgp/pgpGen4Daq/app/qLoopTest -T 0x80 -L 0xf -l 0 -F 15 -s 64'},
 ## procstat
  {                       id:'procstat',    flags:'s',    env:'LD_LIBRARY_PATH=/reg/g/pcds/package/python-2.5.2/lib:/reg/g/pcds/package/qt-4.3.4_x86_64/lib PATH=/reg/g/pcds/package/python-2.5.2/bin:/reg/g/pcds/package/qt-4.3.4_x86_64/bin: PYTHONPATH=', cmd:'/reg/g/pcds/dist/pds/tools/procmgr/procstat.py -t '+username+' -e0 -n none -p '+platform+' p'+platform+'.cnf.last'},
   ]
+
