--- a/psalg/CMakeLists.txt
+++ b/psalg/CMakeLists.txt
@@ -12,4 +12,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
+enable_testing()
+
 add_subdirectory(psalg)
