--- a/psdaq/psdaq/scripts/part0.cnf
+++ b/psdaq/psdaq/scripts/part0.cnf
@@ -41,21 +41,16 @@ ip_addr = '10.0.'+shelf
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- { host: epics_host,  id:'partcas',port:'29450', flags:'s', env:pcas_env, cmd:bins_path+'/launch_pcaspy '+bins_path+'/partcas.py -P DAQ:LAB2'},
- { host: epics_host,  id:'modcas' ,port:'29451', flags:'s', env:pcas_env, cmd:bins_path+'/launch_pcaspy '+bins_path+'/modcas.py -P DAQ:LAB2:XPM:'+shelf},
- { host: epics_host,  id:'xpmioc' ,port:'29452', flags:'s', env:epics_env, cmd:bin_path+'psdaq/xpm/xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
- { host: epics_host,  id:'dticas' ,port:'29453', flags:'s', env:pcas_env, cmd:bins_path+'/launch_pcaspy '+bins_path+'/dticas.py -P DAQ:LAB2:DTI:'+shelf},
- { host: epics_host,  id:'dtiioc-103' ,port:'29455', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVr -a '+ip_addr+'.103 -P DAQ:LAB2:DTI:'+shelf+':3' },
- { host: epics_host,  id:'dtiioc-104' ,port:'29454', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVs -a '+ip_addr+'.104 -P DAQ:LAB2:DTI:'+shelf+':4' },
- { host: epics_host,  id:'dtiioc-105' ,port:'29456', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVr -a '+ip_addr+'.105 -P DAQ:LAB2:DTI:'+shelf+':5' },
- { host: epics_host,  id:'dtiioc-106' ,port:'29457', flags:'s', env:epics_env, cmd:bin_path+'psdaq/dti/dtiPVr -a '+ip_addr+'.106 -P DAQ:LAB2:DTI:'+shelf+':6' },
+ { host: 'daq-tst-dev02', id:'hsdioc-dev02', flags:'sx', env:epics_env, cmd:bin_path+'psdaq/hsd/hsdPVs -P DAQ:LAB2:HSD:DEV02'},
+# { host: 'daq-tst-dev02', id:'hsdioc', flags:'sx', cmd:bin_path+'psdaq/hsd/hsd_pgp -c 0xf -s 0x3 -p 0 -l 320'},
+# { host: 'daq-tst-dev02', id:'hsdioc', flags:'sx', cmd:bin_path+'psdaq/hsd/hsd_pgp -c 0x1 -s 0x1 -p 0 -l 320 -t 0'},
  {                       id:'partca-'+platform ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/partca.py DAQ:LAB2:PART:'+platform},
- {                       id:'partca-4' ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/partca.py DAQ:LAB2:PART:4'},
+# {                       id:'partca-4' ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/partca.py DAQ:LAB2:PART:4'},
  {                       id:'modca'  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/xpmca.py DAQ:LAB2:XPM:'+shelf},
  {                       id:'deadca-'+platform  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/deadca.py DAQ:LAB2 '+platform+' '+shelf},
- {                       id:'dtica'  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/dtica.py DAQ:LAB2:DTI:'+shelf},
-# {                       id:'dti-104' , flags:'sx', cmd:bin_path+'psdaq/dti/dti_simple -a '+ip_addr+'.104 -u 0xf -f 1,2,4,8 -t '+platform},
-# {                       id:'dti-103' , flags:'sx', cmd:bin_path+'psdaq/dti/dti_simple -a '+ip_addr+'.103 -u 0xf -f 1,2,4,8 -t '+platform},
+# {                       id:'dtica'  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/dtica.py DAQ:LAB2:DTI:'+shelf},
+ {                       id:'hsdca'  ,flags:'s', cmd:bins_path+'/launch_py '+bins_path+'/hsdca.py DAQ:LAB2:HSD:DEV02'},
+ { host: 'daq-tst-dev02', id:'hsdRead' ,flags:'sx', env:epics_env, cmd:bin_path+'psdaq/hsd/hsdRead -P /dev/pgpcardG3_0_1 -L 4 -c 8 -o 32 -r -E DAQ:LAB2:HSD:DEV02' },
 
 ## procstat
  {                       id:'procstat',    flags:'s',    env:'LD_LIBRARY_PATH=/reg/g/pcds/package/python-2.5.2/lib:/reg/g/pcds/package/qt-4.3.4_x86_64/lib PATH=/reg/g/pcds/package/python-2.5.2/bin:/reg/g/pcds/package/qt-4.3.4_x86_64/bin: PYTHONPATH=', cmd:'/reg/g/pcds/dist/pds/tools/procmgr/procstat.py -t '+username+' -e0 -n none -p '+platform+' p'+platform+'.cnf.last'},
