--- a/psdaq/psdaq/eb/CMakeLists.txt
+++ b/psdaq/psdaq/eb/CMakeLists.txt
@@ -22,7 +22,6 @@ target_include_directories(eb PUBLIC
 find_library(FABRIC_CPP_LIBRARY fabric PATH $ENV{CONDA_PREFIX}/lib)
 
 target_link_libraries(eb
-#  -pg
   xtcdata
   service
   ${FABRIC_CPP_LIBRARY}
@@ -30,14 +29,14 @@ target_link_libraries(eb
 
 add_executable(ft_pingpong ft_pingpong.cc fiTransport.cc)
 
-#add_executable(ft_publish         ft_publish.cc)
-#add_executable(ft_sub             ft_sub.cc)
-#add_executable(ft_push            ft_push.cc)
-#add_executable(ft_request         ft_request.cc)
-#add_executable(ft_server          ft_server.cc)
-#add_executable(ft_client          ft_client.cc)
-#add_executable(ft_writemsg_client ft_writemsg_client.cc)
-#add_executable(ft_writemsg_server ft_writemsg_server.cc)
+add_executable(ft_publish         ft_publish.cc)
+add_executable(ft_sub             ft_sub.cc)
+add_executable(ft_push            ft_push.cc)
+add_executable(ft_request         ft_request.cc)
+add_executable(ft_server          ft_server.cc)
+add_executable(ft_client          ft_client.cc)
+add_executable(ft_writemsg_client ft_writemsg_client.cc)
+add_executable(ft_writemsg_server ft_writemsg_server.cc)
 
 add_executable(eblf_pingpong    eblf_pingpong.cc)
 
@@ -53,52 +52,51 @@ target_link_libraries(ft_pingpong
   eb
 )
 
-#target_link_libraries(ft_publish
-#  eb
-#  pthread
-#)
-#
-#target_link_libraries(ft_sub
-#  eb
-#)
-#
-#target_link_libraries(ft_push
-#  eb
-#)
-#
-#target_link_libraries(ft_request
-#  eb
-#)
-#
-#target_link_libraries(ft_client
-#  eb
-#)
-#
-#target_link_libraries(ft_server
-#  eb
-#)
-#
-#target_link_libraries(ft_writemsg_client
-#  eb
-#)
-#
-#target_link_libraries(ft_writemsg_server
-#  eb
-#)
+target_link_libraries(ft_publish
+  eb
+  pthread
+)
 
-target_link_libraries(eblf_pingpong
+target_link_libraries(ft_sub
   eb
 )
 
+target_link_libraries(ft_push
+  eb
+)
+
+target_link_libraries(ft_request
+  eb
+)
+
+target_link_libraries(ft_client
+  eb
+)
+
+target_link_libraries(ft_server
+  eb
+)
+
+target_link_libraries(ft_writemsg_client
+  eb
+)
+
+target_link_libraries(ft_writemsg_server
+  eb
+)
+
+target_link_libraries(eblf_pingpong
+  eb
+  ${FABRIC_CPP_LIBRARY}
+)
+
 target_link_libraries(tstEbContributor
-#  -pg
   eb
   pthread
   rt
 )
 
 target_link_libraries(tstEbBuilder
-#  -pg
   eb
   pthread
   rt
@@ -112,14 +110,14 @@ target_link_libraries(drpEbBuilder
 
 install(TARGETS eb
   ft_pingpong
-#  ft_publish
-#  ft_sub
-#  ft_push
-#  ft_request
-#  ft_client
-#  ft_server
-#	 ft_writemsg_client
-#	 ft_writemsg_server
+  ft_publish
+  ft_sub
+  ft_push
+  ft_request
+  ft_client
+  ft_server
+  ft_writemsg_client
+	ft_writemsg_server
   tstEbContributor
 	tstEbBuilder
 	drpEbBuilder
