integrate event builder into drp

--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_library(drp SHARED
     #Digitizer.cc
-    #AreaDetector.cc
-    #    EventBuilder.cc
+    AreaDetector.cc
+    Worker.cc
+    Collector.cc
     PGPReader.cc
 )
 
@@ -9,14 +10,14 @@ target_link_libraries(drp
     xtcdata
     pgpdriver
     #pshdf5
-    #eb
+    eb
 )
 
 target_include_directories(drp PUBLIC
     ../psdaq/pgp/user-driver
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
-)    
+)
 
 add_executable(main
     main2.cc
@@ -26,4 +27,3 @@ target_link_libraries(main
     drp
     pthread
 )
-
