--- a/psdaq/CMakeLists.txt
+++ b/psdaq/CMakeLists.txt
@@ -15,3 +15,4 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 add_subdirectory(psdaq)
 add_subdirectory(drp)
 add_subdirectory(drp_olddriver)
+add_subdirectory(pydaq)
