Updates for pgp3.

--- a/psdaq/psdaq/hsd/CMakeLists.txt
+++ b/psdaq/psdaq/hsd/CMakeLists.txt
@@ -13,7 +13,8 @@ add_library(hsd SHARED
   LocalCpld.cc
   Mmcm.cc
   Module.cc
-  Pgp2bAxi.cc
+  Pgp2b.cc
+  Pgp3.cc
   PhyCore.cc
   QABase.cc
   TprCore.cc
